--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <center>
       <div class="btn btn-primary heading">
         <h3>AI mario game</h3>
-        <button class="btn btn-primary" data-toggle="#mymodal">Instructions</button>
+        <button class="btn btn-primary" data-toggle="modal" data-target="#myModal">Instructions</button>
       </div>
 
       <img src="mario.jpg" class="big image">
@@ -43,6 +43,25 @@
       <br><br>
       <div id="canvas"></div>
       <div id="game_console"></div>
+      <h4>
+        source code : <a href="https://github.com/linuk">linuk</a> || Game Cridet : Mario
+      </h4>
+
+      <div id="myModal" class="modal fade">
+      <div class="modal-dialog">
+        <div class="modal-content">
+        <div class="modal-header">
+          <button class="close" data-dismiss="modal">&times</button>
+          <h4>instructions</h4>
+          <div class="modal-body">
+            <img src="jump.png" class="instruction image">
+            <img src="right.png" class="instruction image">
+            <img src="left.png" class="instruction image">
+          </div>
+        </div>
+        </div>
+      </div>
+      </div>
     </center>
 
   </body>
