--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
       <br><br>
       <div id="canvas"></div>
       <div id="game_console"></div>
+      <div id="game_console"></div>
       <h4>
         source code : <a href="https://github.com/linuk">linuk</a> || Game Cridet : Mario
       </h4>
